<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/matchmaking_fragment">

    <fragment
            android:id="@+id/matchmaking_fragment"
            android:name="corp.amq.hkd.ui.fragments.matchmaking.MatchmakingFragment"
            android:label="@string/matchmaking_fragment_title"
            tools:layout="@layout/fragment_matchmaking">

        <action
            android:id="@+id/action_matchmaking_fragment_to_profile_fragment"
            app:destination="@id/profile_fragment" />
    </fragment>


    <fragment
        android:id="@+id/profile_settings_fragment"
        android:name="corp.amq.hkd.ui.fragments.settings.SettingsFragment"
        android:label="@string/profile_settings"
        tools:layout="@layout/fragment_profile_settings">

    </fragment>

    <fragment
            android:id="@+id/messages_fragment"
            android:name="corp.amq.hkd.ui.fragments.messages.MessagesFragment"
            android:label="@string/messages_fragment_title"
            tools:layout="@layout/fragment_messages">
        <action
            android:id="@+id/action_messages_fragment_to_message_fragment"
            app:destination="@id/message_fragment" />
    </fragment>

    <fragment
            android:id="@+id/profile_fragment"
            android:name="corp.amq.hkd.ui.fragments.profile.ProfileFragment"
            android:label="@string/profile_fragment_title"
        tools:layout="@layout/fragment_profile">

        <argument
            android:name="profileArg"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_profile_fragment_to_profile_settings_fragment"
            app:destination="@id/profile_settings_fragment" />

    </fragment>

    <fragment
        android:id="@+id/message_fragment"
        android:name="corp.amq.hkd.ui.fragments.messages.MessageFragment"
        android:label="@string/message_fragment_title"
        tools:layout="@layout/fragment_message">

        <argument
            android:name="messageArg"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />

        <action
            android:id="@+id/action_message_fragment_to_profile_fragment"
            app:destination="@id/profile_fragment" />

    </fragment>

    <fragment
            android:id="@+id/filter_fragment"
            android:name="corp.amq.hkd.ui.fragments.filters.FilterFragment"
            android:label="@string/filter_fragment_title"
            tools:layout="@layout/fragment_filter">
        <action
                android:id="@+id/action_filter_fragment_to_matchmaking_fragment"
                app:destination="@id/matchmaking_fragment"/>
    </fragment>

</navigation>